[tool.poetry]
name = "yolo-corrosion-detection"
version = "0.1.0"
description = "Basic implementation of rust corrosion detection, with YOLOv7"
authors = ["Jose Damico <jose.damico@scicrop.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5,<1.24.0"
opencv-python = ">=4.1.1"
pillow = ">=7.1.2"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
torch = ">=1.7.0,<1.12.0 || >1.12.0"
torchvision = ">=0.8.1,<0.13.0 || >0.13.0"
tqdm = ">=4.41.0"
protobuf = "<4.21.3"
tensorboard = ">=2.4.1"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
ipython = "^8.23.0"
psutil = "^5.9.8"
thop = "^0.1.1.post2209072238"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


